# jq.py

./: MANIFEST.in  makefile  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml
